@@ -16,7 +16,7 @@
 
 package org.springframework.boot.build.toolchain;
 
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import org.gradle.api.Plugin;
@@ -56,7 +56,6 @@ public class ToolchainPlugin implements Plugin<Project> {
 			JavaToolchainSpec toolchainSpec = project.getExtensions().getByType(JavaPluginExtension.class)
 					.getToolchain();
 			toolchainSpec.getLanguageVersion().set(toolchain.getJavaVersion());
-			configureJavaCompileToolchain(project);
 			configureTestToolchain(project);
 		}
 	}
@@ -72,20 +71,9 @@ public class ToolchainPlugin implements Plugin<Project> {
 		project.getTasks().withType(Test.class, (task) -> task.setEnabled(false));
 	}
 
-	private void configureJavaCompileToolchain(Project project) {
-		project.getTasks().withType(JavaCompile.class, (compile) -> {
-			compile.getOptions().setFork(true);
-			// See https://github.com/gradle/gradle/issues/15538
-			List<String> forkArgs = Arrays.asList("--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED");
-			compile.getOptions().getForkOptions().getJvmArgs().addAll(forkArgs);
-		});
-	}
-
 	private void configureTestToolchain(Project project) {
 		project.getTasks().withType(Test.class, (test) -> {
-			// See https://github.com/spring-projects/spring-ldap/issues/570
-			List<String> arguments = Arrays.asList("--add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED",
-					"--illegal-access=warn");
+			List<String> arguments = Collections.singletonList("--illegal-access=warn");
 			test.jvmArgs(arguments);
 		});
 	}
